# agent-eval

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md  roadmap.md
examples/: suite_bad.json  suite_good.json
scripts/: check_contracts.sh  release_local.sh
src/agent_eval_suite/: __init__.py  __main__.py  adapter_conformance.py  artifacts.py  benchmarks.py  cli.py  compare.py  contracts.py  environment.py  framework_importers.py  gate.py  importers.py  loop_runner.py  otel_export.py  plugins.py  provenance.py  registry.py  replay.py  replay_engine.py  reporting.py  runner.py  scaffold.py  schema.py  schema_governance.py  stability.py
src/agent_eval_suite/judges/: __init__.py  base.py  cost_budget.py  json_schema.py  latency_slo.py  lean.py  loop_guard.py  policy.py  prompt_injection.py  regex.py  repair_path.py  retry_storm.py  tool_abuse.py  tool_contract.py  trajectory_step.py  utils.py
tests/: test_adapter_conformance.py  test_benchmark_generate.py  test_cli_errors.py  test_compare.py  test_framework_import.py  test_governance_and_reporting.py  test_import_trace.py  test_init.py  test_loop_replay_otel.py  test_provenance.py  test_registry.py  test_registry_governance.py  test_replay_exec.py  test_risk_judges.py  test_schema_compat.py  test_smoke.py  test_stability.py
tests/fixtures/: mock_loop_agent.py
tests/fixtures/adapters/: anthropic_record.json  anthropic_record_alt.json  foundry_record.json  foundry_record_alt.json  openai_record.json  openai_record_alt.json  vertex_record.json  vertex_record_alt.json
(+4 files in other folders)
